Complete the first stage of the programmming!

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>Discover the world</title>
-    <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
+    <link href="resources/css/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
     <div>
@@ -9,13 +9,22 @@
       <p> <a href = "#download"> Download excursion (Coming soon!) </a> </p>
     </div>
     <div>
+      <video controls>
+        <source src = "resources/videos/excursion.mp4" type = "video/mp4">
+      </video>
+    </div>
+    <div>
       <h1 class = "guide"> Your personal travel guide </h1>
-      <p> Excursion remembers places you like, and recommend new points of interest around you.</p>
+      <p id = "remember"> Excursion remembers places you like, and recommend new points of interest around you.</p>
+      <img src = "https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/camp.jpg"></img>
+    </div>
+    <div>
+      <img src = "./resources/images/phone.png"></img>
     </div>
     <div>
       <h1 class = "soon"> Coming Soon for iPhone and Android </h1>
       <p> <a href = "#download"> Download Excursion (Coming soon!) </a> </p>
     </div>
-    <h5>&copy;Excursion </h5>
+    <h5 id = "copy">&copy;Excursion </h5>
   </body>
 </html>
