--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </div>
     <div>
       <video controls>
-        <source src = "resources/videos/excursion.mp4" type = "video/mp4">
+        <source src = "./resources/videos/excursion.mp4" type = "video/mp4">
       </video>
     </div>
     <div>
